src/component/Searchbar.css
.searchBar{
    display: flex;
    margin: auto;
    width: 40%;
    border: 1px solid black;
    align-items: center;
    margin-top: 30px;
    margin-bottom: 30px;
}

.searchBar > input{
    flex: 1;
    border: none;
}

.buttn{
    border: none;
}

.buttn:hover{
    box-shadow: 4px 2px 4px rgba(0, 0, 0, .4);
    cursor: pointer;
}

.buttn:active{
    transition: 0.1s;
}

@media screen and (max-width: 600px){
    .searchBar{
        width: 70%;
    }
}

